Fix link in hero on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -322,7 +322,8 @@ nav a.btn.menu-btn.btn-base li.nav-item strong {
     .hero-text,
     .hero-inner img {
         max-height:unset !important;
-        min-height:90vh;
+        min-height:600px;
+        height:auto;
     }
     .hero-text {
         padding-top:100px;
@@ -340,6 +341,13 @@ nav a.btn.menu-btn.btn-base li.nav-item strong {
     .navbar-brand img {
         height:80px;
     }
+    .hero-inner .btn-link {
+        display:flex;
+        margin-left:0 !important;
+        padding-left:0;
+        margin-top:15px;
+    }
+
     .container,
     .container-fluid,
     .row.featurette {
